# stud-iu-back

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml
board_members/: admin.py  apps.py  models.py  router.py  serializers.py  urls.py
board_members/migrations/: 0001_initial.py
events/: admin.py  enums.py  models.py  router.py  serializers.py  urls.py
events/migrations/: 0001_initial.py  0002_alter_eventimages_image.py  0002_futureevents_color_pastevents_color.py  0003_alter_eventimages_future_event_and_more.py  0003_futureevents_place_pastevents_place_and_more.py  0004_alter_eventimages_future_event_and_more.py
events/utils/: __init__.py  date_utils.py
news/: admin.py  models.py  router.py  serializers.py  urls.py
news/migrations/: 0001_initial.py  0002_remove_news_cover_url_news_cover.py  0003_alter_news_cover.py
partners/: admin.py  models.py  router.py  serializers.py
partners/migrations/: 0001_initial.py
stud_iu_back/: asgi.py  settings.py  urls.py  wsgi.py
stud_iu_back/urls/: __init__.py  v0.py
